--- a/index.html
+++ b/index.html
@@ -16,54 +16,62 @@
       fill: #000;
       pointer-events: none;
     }
+    .link {
+      fill: none;
+      stroke: #555;
+      stroke-width: 2px;
+    }
   </style>
 </head>
 <body>
   <div id="tree"></div>
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script>
-    const width = 960, height = 500;
+    // Fetch the JSON file
+    fetch('example.json')
+      .then(response => response.json())
+      .then(dialoguesData => {
+        const width = 960, height = 500;
 
-    const treeLayout = d3.tree().size([height, width - 160]);
-    const root = d3.hierarchy(dialoguesData[0]);
+        const treeLayout = d3.tree().size([height, width - 160]);
+        const root = d3.hierarchy(dialoguesData[0], d => d.responses);
 
-    treeLayout(root);
+        treeLayout(root);
 
-    const svg = d3.select("#tree")
-      .append("svg")
-      .attr("width", width)
-      .attr("height", height);
+        const svg = d3.select("#tree")
+          .append("svg")
+          .attr("width", width)
+          .attr("height", height);
 
-    const g = svg.append("g")
-      .attr("transform", "translate(40,0)");
+        const g = svg.append("g")
+          .attr("transform", "translate(40,0)");
 
-    const link = g.selectAll(".link")
-      .data(root.descendants().slice(1))
-      .enter().append("path")
-      .attr("class", "link")
-      .attr("d", d => `
-        M${d.y},${d.x}
-        C${(d.y + d.parent.y) / 2},${d.x}
-         ${(d.y + d.parent.y) / 2},${d.parent.x}
-         ${d.parent.y},${d.parent.x}
-      `);
+        const link = g.selectAll(".link")
+          .data(root.descendants().slice(1))
+          .enter().append("path")
+          .attr("class", "link")
+          .attr("d", d => `
+            M${d.y},${d.x}
+            C${(d.y + d.parent.y) / 2},${d.x}
+             ${(d.y + d.parent.y) / 2},${d.parent.x}
+             ${d.parent.y},${d.parent.x}
+          `);
 
-    const node = g.selectAll(".node")
-      .data(root.descendants())
-      .enter().append("g")
-      .attr("class", "node")
-      .attr("transform", d => `translate(${d.y},${d.x})`);
+        const node = g.selectAll(".node")
+          .data(root.descendants())
+          .enter().append("g")
+          .attr("class", "node")
+          .attr("transform", d => `translate(${d.y},${d.x})`);
 
-    node.append("circle")
-      .attr("r", 4);
+        node.append("circle")
+          .attr("r", 4);
 
-    node.append("text")
-      .attr("dy", 3)
-      .attr("x", d => d.children ? -8 : 8)
-      .style("text-anchor", d => d.children ? "end" : "start")
-      .text(d => d.data.text);
-
-    const dialoguesData = "example.json"; // Replace with your dialogues data
+        node.append("text")
+          .attr("dy", 3)
+          .attr("x", d => d.children ? -8 : 8)
+          .style("text-anchor", d => d.children ? "end" : "start")
+          .text(d => d.data.text);
+      });
   </script>
 </body>
 </html>
