--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     }
     .node circle {
       fill: #999;
+      stroke: steelblue;
+      stroke-width: 3px;
     }
     .node text {
       font: 12px sans-serif;
@@ -19,7 +21,8 @@
     .link {
       fill: none;
       stroke: #555;
-      stroke-width: 2px;
+      stroke-opacity: 0.4;
+      stroke-width: 1.5px;
     }
   </style>
 </head>
@@ -28,49 +31,136 @@
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script>
     // Fetch the JSON file
-    fetch('example.json')
+    fetch('dialogues.json')
       .then(response => response.json())
       .then(dialoguesData => {
-        const width = 960, height = 500;
-
-        const treeLayout = d3.tree().size([height, width - 160]);
-        const root = d3.hierarchy(dialoguesData[0], d => d.responses);
-
-        treeLayout(root);
+        const width = 960;
+        const height = 600;
 
         const svg = d3.select("#tree")
           .append("svg")
           .attr("width", width)
-          .attr("height", height);
-
-        const g = svg.append("g")
+          .attr("height", height)
+          .append("g")
           .attr("transform", "translate(40,0)");
 
-        const link = g.selectAll(".link")
-          .data(root.descendants().slice(1))
-          .enter().append("path")
-          .attr("class", "link")
-          .attr("d", d => `
-            M${d.y},${d.x}
-            C${(d.y + d.parent.y) / 2},${d.x}
-             ${(d.y + d.parent.y) / 2},${d.parent.x}
-             ${d.parent.y},${d.parent.x}
-          `);
+        const root = d3.hierarchy(dialoguesData[0], d => d.responses);
+        const treeLayout = d3.tree().size([height, width - 160]);
 
-        const node = g.selectAll(".node")
-          .data(root.descendants())
-          .enter().append("g")
-          .attr("class", "node")
-          .attr("transform", d => `translate(${d.y},${d.x})`);
+        treeLayout(root);
 
-        node.append("circle")
-          .attr("r", 4);
+        let i = 0, duration = 750;
 
-        node.append("text")
-          .attr("dy", 3)
-          .attr("x", d => d.children ? -8 : 8)
-          .style("text-anchor", d => d.children ? "end" : "start")
-          .text(d => d.data.text);
+        const update = (source) => {
+          const treeData = treeLayout(root);
+          const nodes = treeData.descendants().reverse();
+          const links = treeData.descendants().slice(1);
+
+          nodes.forEach(d => d.y = d.depth * 180);
+
+          const node = svg.selectAll('g.node')
+            .data(nodes, d => d.id || (d.id = ++i));
+
+          const nodeEnter = node.enter().append('g')
+            .attr('class', 'node')
+            .attr('transform', d => `translate(${source.y0},${source.x0})`)
+            .on('click', click);
+
+          nodeEnter.append('circle')
+            .attr('class', 'node')
+            .attr('r', 1e-6)
+            .style('fill', d => d._children ? 'lightsteelblue' : '#fff');
+
+          nodeEnter.append('text')
+            .attr('dy', '.35em')
+            .attr('x', d => d.children || d._children ? -13 : 13)
+            .attr('text-anchor', d => d.children || d._children ? 'end' : 'start')
+            .text(d => d.data.text);
+
+          const nodeUpdate = nodeEnter.merge(node);
+
+          nodeUpdate.transition()
+            .duration(duration)
+            .attr('transform', d => `translate(${d.y},${d.x})`);
+
+          nodeUpdate.select('circle.node')
+            .attr('r', 10)
+            .style('fill', d => d._children ? 'lightsteelblue' : '#fff')
+            .attr('cursor', 'pointer');
+
+          const nodeExit = node.exit().transition()
+            .duration(duration)
+            .attr('transform', d => `translate(${source.y},${source.x})`)
+            .remove();
+
+          nodeExit.select('circle')
+            .attr('r', 1e-6);
+
+          nodeExit.select('text')
+            .style('fill-opacity', 1e-6);
+
+          const link = svg.selectAll('path.link')
+            .data(links, d => d.id);
+
+          const linkEnter = link.enter().insert('path', 'g')
+            .attr('class', 'link')
+            .attr('d', d => {
+              const o = {x: source.x0, y: source.y0};
+              return diagonal(o, o);
+            });
+
+          const linkUpdate = linkEnter.merge(link);
+
+          linkUpdate.transition()
+            .duration(duration)
+            .attr('d', d => diagonal(d, d.parent));
+
+          link.exit().transition()
+            .duration(duration)
+            .attr('d', d => {
+              const o = {x: source.x, y: source.y};
+              return diagonal(o, o);
+            })
+            .remove();
+
+          nodes.forEach(d => {
+            d.x0 = d.x;
+            d.y0 = d.y;
+          });
+
+          function diagonal(s, d) {
+            return `M ${s.y} ${s.x}
+                    C ${(s.y + d.y) / 2} ${s.x},
+                      ${(s.y + d.y) / 2} ${d.x},
+                      ${d.y} ${d.x}`;
+          }
+
+          function click(event, d) {
+            if (d.children) {
+              d._children = d.children;
+              d.children = null;
+            } else {
+              d.children = d._children;
+              d._children = null;
+            }
+            update(d);
+          }
+        };
+
+        root.x0 = height / 2;
+        root.y0 = 0;
+
+        root.children.forEach(collapse);
+
+        update(root);
+
+        function collapse(d) {
+          if (d.children) {
+            d._children = d.children;
+            d._children.forEach(collapse);
+            d.children = null;
+          }
+        }
       });
   </script>
 </body>
