--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script>
     // Fetch the JSON file
-    fetch('dialogues.json')
+    fetch('example.json')
       .then(response => response.json())
       .then(dialoguesData => {
         const width = 960;
