--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script>
     // Fetch the JSON file
-    fetch('example.json')
+    fetch('dialogues.json')
       .then(response => response.json())
       .then(dialoguesData => {
         const width = 960;
@@ -42,10 +42,10 @@
           .attr("width", width)
           .attr("height", height)
           .append("g")
-          .attr("transform", "translate(40,0)");
+          .attr("transform", "translate(0,40)");
 
         const root = d3.hierarchy(dialoguesData[0], d => d.responses);
-        const treeLayout = d3.tree().size([height, width - 160]);
+        const treeLayout = d3.tree().size([width, height - 160]);
 
         treeLayout(root);
 
@@ -56,14 +56,14 @@
           const nodes = treeData.descendants().reverse();
           const links = treeData.descendants().slice(1);
 
-          nodes.forEach(d => d.y = d.depth * 180);
+          nodes.forEach(d => d.y = d.depth * 100);
 
           const node = svg.selectAll('g.node')
             .data(nodes, d => d.id || (d.id = ++i));
 
           const nodeEnter = node.enter().append('g')
             .attr('class', 'node')
-            .attr('transform', d => `translate(${source.y0},${source.x0})`)
+            .attr('transform', d => `translate(${source.x0},${source.y0})`)
             .on('click', click);
 
           nodeEnter.append('circle')
@@ -81,7 +81,7 @@
 
           nodeUpdate.transition()
             .duration(duration)
-            .attr('transform', d => `translate(${d.y},${d.x})`);
+            .attr('transform', d => `translate(${d.x},${d.y})`);
 
           nodeUpdate.select('circle.node')
             .attr('r', 10)
@@ -90,7 +90,7 @@
 
           const nodeExit = node.exit().transition()
             .duration(duration)
-            .attr('transform', d => `translate(${source.y},${source.x})`)
+            .attr('transform', d => `translate(${source.x},${source.y})`)
             .remove();
 
           nodeExit.select('circle')
@@ -129,10 +129,10 @@
           });
 
           function diagonal(s, d) {
-            return `M ${s.y} ${s.x}
-                    C ${(s.y + d.y) / 2} ${s.x},
-                      ${(s.y + d.y) / 2} ${d.x},
-                      ${d.y} ${d.x}`;
+            return `M ${s.x} ${s.y}
+                    C ${(s.x + d.x) / 2} ${s.y},
+                      ${(s.x + d.x) / 2} ${d.y},
+                      ${d.x} ${d.y}`;
           }
 
           function click(event, d) {
@@ -147,7 +147,7 @@
           }
         };
 
-        root.x0 = height / 2;
+        root.x0 = width / 2;
         root.y0 = 0;
 
         root.children.forEach(collapse);
