--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     .node {
       cursor: pointer;
     }
-    .node circle {
+    .node rect {
       fill: #999;
       stroke: steelblue;
-      stroke-width: 3px;
+      stroke-width: 1.5px;
     }
     .node text {
       font: 12px sans-serif;
@@ -35,28 +35,32 @@
       .then(response => response.json())
       .then(dialoguesData => {
         const width = 960;
-        const height = 600;
+        const height = 800;
 
         const svg = d3.select("#tree")
           .append("svg")
           .attr("width", width)
           .attr("height", height)
           .append("g")
-          .attr("transform", "translate(0,40)");
+          .attr("transform", "translate(40,40)");
+
+        const treeLayout = d3.tree().size([width - 160, height - 160]);
 
         const root = d3.hierarchy(dialoguesData[0], d => d.responses);
-        const treeLayout = d3.tree().size([width, height - 160]);
+        root.x0 = (width - 160) / 2;
+        root.y0 = 0;
 
-        treeLayout(root);
-
-        let i = 0, duration = 750;
+        let i = 0;
+        const duration = 750;
+        const rectWidth = 200;
+        const rectHeight = 50;
 
         const update = (source) => {
           const treeData = treeLayout(root);
-          const nodes = treeData.descendants().reverse();
-          const links = treeData.descendants().slice(1);
+          const nodes = treeData.descendants();
+          const links = treeData.links();
 
-          nodes.forEach(d => d.y = d.depth * 100);
+          nodes.forEach(d => { d.y = d.depth * 100 });
 
           const node = svg.selectAll('g.node')
             .data(nodes, d => d.id || (d.id = ++i));
@@ -66,16 +70,19 @@
             .attr('transform', d => `translate(${source.x0},${source.y0})`)
             .on('click', click);
 
-          nodeEnter.append('circle')
-            .attr('class', 'node')
-            .attr('r', 1e-6)
+          nodeEnter.append('rect')
+            .attr('width', rectWidth)
+            .attr('height', rectHeight)
+            .attr('x', -rectWidth / 2)
+            .attr('y', -rectHeight / 2)
             .style('fill', d => d._children ? 'lightsteelblue' : '#fff');
 
           nodeEnter.append('text')
             .attr('dy', '.35em')
-            .attr('x', d => d.children || d._children ? -13 : 13)
-            .attr('text-anchor', d => d.children || d._children ? 'end' : 'start')
-            .text(d => d.data.text);
+            .attr('x', 0)
+            .attr('text-anchor', 'middle')
+            .text(d => d.data.text)
+            .call(wrap, rectWidth - 10); // call wrap function
 
           const nodeUpdate = nodeEnter.merge(node);
 
@@ -83,8 +90,11 @@
             .duration(duration)
             .attr('transform', d => `translate(${d.x},${d.y})`);
 
-          nodeUpdate.select('circle.node')
-            .attr('r', 10)
+          nodeUpdate.select('rect')
+            .attr('width', rectWidth)
+            .attr('height', rectHeight)
+            .attr('x', -rectWidth / 2)
+            .attr('y', -rectHeight / 2)
             .style('fill', d => d._children ? 'lightsteelblue' : '#fff')
             .attr('cursor', 'pointer');
 
@@ -93,14 +103,17 @@
             .attr('transform', d => `translate(${source.x},${source.y})`)
             .remove();
 
-          nodeExit.select('circle')
-            .attr('r', 1e-6);
+          nodeExit.select('rect')
+            .attr('width', rectWidth)
+            .attr('height', rectHeight)
+            .attr('x', -rectWidth / 2)
+            .attr('y', -rectHeight / 2);
 
           nodeExit.select('text')
             .style('fill-opacity', 1e-6);
 
           const link = svg.selectAll('path.link')
-            .data(links, d => d.id);
+            .data(links, d => d.target.id);
 
           const linkEnter = link.enter().insert('path', 'g')
             .attr('class', 'link')
@@ -113,7 +126,7 @@
 
           linkUpdate.transition()
             .duration(duration)
-            .attr('d', d => diagonal(d, d.parent));
+            .attr('d', d => diagonal(d.source, d.target));
 
           link.exit().transition()
             .duration(duration)
@@ -147,12 +160,29 @@
           }
         };
 
-        root.x0 = width / 2;
-        root.y0 = 0;
-
-        root.children.forEach(collapse);
-
-        update(root);
+        function wrap(text, width) {
+          text.each(function() {
+            const text = d3.select(this),
+                  words = text.text().split(/\s+/).reverse(),
+                  lineHeight = 1.1; // ems
+            let word,
+                line = [],
+                lineNumber = 0,
+                y = text.attr("y"),
+                dy = parseFloat(text.attr("dy")),
+                tspan = text.text(null).append("tspan").attr("x", 0).attr("y", y).attr("dy", dy + "em");
+            while (word = words.pop()) {
+              line.push(word);
+              tspan.text(line.join(" "));
+              if (tspan.node().getComputedTextLength() > width) {
+                line.pop();
+                tspan.text(line.join(" "));
+                line = [word];
+                tspan = text.append("tspan").attr("x", 0).attr("y", y).attr("dy", ++lineNumber * lineHeight + dy + "em").text(word);
+              }
+            }
+          });
+        }
 
         function collapse(d) {
           if (d.children) {
@@ -161,7 +191,11 @@
             d.children = null;
           }
         }
-      });
+
+        root.children.forEach(collapse);
+        update(root);
+      })
+      .catch(error => console.error(error));
   </script>
 </body>
 </html>
