--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
             .attr('x', 0)
             .attr('text-anchor', 'middle')
             .text(d => d.data.text)
-            .each(wrap)
-            .call(adjustRectSize);
+            .each(wrap);
 
           const nodeUpdate = nodeEnter.merge(node);
 
@@ -166,10 +165,9 @@
               line = [],
               lineNumber = 0,
               lineHeight = 1.1, // ems
-              x = self.attr("x"),
               y = self.attr("y"),
               dy = parseFloat(self.attr("dy")),
-              tspan = self.text(null).append("tspan").attr("x", x).attr("y", y).attr("dy", dy + "em");
+              tspan = self.text(null).append("tspan").attr("x", 0).attr("y", y).attr("dy", dy + "em");
           while (word = words.pop()) {
             line.push(word);
             tspan.text(line.join(" "));
@@ -177,13 +175,10 @@
               line.pop();
               tspan.text(line.join(" "));
               line = [word];
-              tspan = self.append("tspan").attr("x", x).attr("y", y).attr("dy", ++lineNumber * lineHeight + dy + "em").text(word);
+              tspan = self.append("tspan").attr("x", 0).attr("y", y).attr("dy", ++lineNumber * lineHeight + dy + "em").text(word);
             }
           }
-        }
-
-        function adjustRectSize(d) {
-          const self = d3.select(this);
+          // Calculate the bounding box after wrapping
           const bbox = self.node().getBBox();
           d.bbox = bbox;
         }
