--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     fetch('dialogues.json')
       .then(response => response.json())
       .then(dialoguesData => {
-        const width = 2000;
-        const height = 14400;
+        const width = 960;
+        const height = 800;
 
         const svg = d3.select("#tree")
           .append("svg")
@@ -171,7 +171,7 @@
           while (word = words.pop()) {
             line.push(word);
             tspan.text(line.join(" "));
-            if (tspan.node().getComputedTextLength() > 180) {
+            if (tspan.node().getComputedTextLength() > 100) { // limit line width
               line.pop();
               tspan.text(line.join(" "));
               line = [word];
