--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   </style>
 </head>
 <body>
+  <a href="GPT-4-turbo.html">link text</a>
   <div id="tree"></div>
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script>
