--- a/index.html
+++ b/index.html
@@ -5,30 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dialogue Visualization</title>
   <style>
-    .node {
-      cursor: pointer;
-    }
-    .node rect {
-      fill: #999;
-      stroke: steelblue;
-      stroke-width: 1.5px;
-    }
-    .node text {
-      font: 12px sans-serif;
-      fill: #000;
-      pointer-events: none;
-    }
-    .link {
-      fill: none;
-      stroke: #555;
-      stroke-opacity: 0.4;
-      stroke-width: 1.5px;
-    }
+    body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
   </style>
 </head>
 <body>
   <a href="GPT-4-turbo.html">Case study with GPT-4 Turbo</a>
-  <a href="GPT-4-turbo.html">Case study with Meta-Llama-3 80B</a>
-  <a href="GPT-4-turbo.html">Case study with HAI-Co2</a>
+  <a href="Meta-Llama-3-80B-Instruct.html">Case study with Meta-Llama-3 80B</a>
+  <a href="SpecificationLayer.html">Case study with HAI-Co2-Specification Module</a>
+  <a href="UMLLayer.html">Case study with HAI-Co2-Specification Module</a>
+  <a href="PreferenceLayer.html">Case study with HAI-Co2-Specification Module</a>
+  <a href="CodeGenLayer.html">Case study with HAI-Co2-Specification Module</a>
 </body>
 </html>
