--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
   <a href="GPT-4-turbo.html">Case study with GPT-4 Turbo</a>
   <a href="Meta-Llama-3-80B-Instruct.html">Case study with Meta-Llama-3 80B</a>
-  <a href="SpecificationLayer.html">Case study with HAI-Co2-Specification Module</a>
-  <a href="UMLLayer.html">Case study with HAI-Co2-Specification Module</a>
-  <a href="PreferenceLayer.html">Case study with HAI-Co2-Specification Module</a>
-  <a href="CodeGenLayer.html">Case study with HAI-Co2-Specification Module</a>
+  <a href="SpecificationLayer.html">Case study with HAI-Co2 Specification Module</a>
+  <a href="UMLLayer.html">Case study with HAI-Co2 UML Module</a>
+  <a href="PreferenceLayer.html">Case study with HAI-Co2 Preference learning Module</a>
+  <a href="CodeGenLayer.html">Case study with HAI-Co2 Code Generation Module</a>
 </body>
 </html>
