--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
   </style>
 </head>
 <body>
-  <a href="GPT-4-turbo.html">Case study with GPT-4 Turbo</a>
-  <a href="Meta-Llama-3-80B-Instruct.html">Case study with Meta-Llama-3 80B</a>
-  <a href="SpecificationLayer.html">Case study with HAI-Co2 Specification Module</a>
-  <a href="UMLLayer.html">Case study with HAI-Co2 UML Module</a>
-  <a href="PreferenceLayer.html">Case study with HAI-Co2 Preference learning Module</a>
-  <a href="CodeGenLayer.html">Case study with HAI-Co2 Code Generation Module</a>
+  <a href="Assistant\ 1.html">HAI-Co2 example interaction</a>
+  <a href="Assistant\ 2.html">GPT-4 Turbo example interaction</a>
 </body>
 </html>
