--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   </style>
 </head>
 <body>
-  <a href="Assistant\ 1.html">HAI-Co2 example interaction</a>
-  <a href="Assistant\ 2.html">GPT-4 Turbo example interaction</a>
+  <a href="Assistant1.html">HAI-Co2 example interaction</a>
+  <a href="Assistant2.html">GPT-4 Turbo example interaction</a>
+  <a href="FormResponses.html">Human evaluation responses</a>
 </body>
 </html>
