--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </style>
 </head>
 <body>
+  <a href="PreferenceLayer.html">Preference-based tournament</a>
   <a href="Assistant1.html">HAI-Co2 example interaction</a>
   <a href="Assistant2.html">GPT-4 Turbo example interaction</a>
   <a href="FormResponses.html">Human evaluation responses</a>
